added log file and pagination